RESOLVED FIXED56660
Car model dropdowns at audiusa.com lay out incorrectly with compositing enabled
https://bugs.webkit.org/show_bug.cgi?id=56660
Summary Car model dropdowns at audiusa.com lay out incorrectly with compositing enabled
Simon Fraser (smfr)
Reported 2011-03-18 11:16:09 PDT
When you hover over the model dropdowns along the top of http://progress.audiusa.com/, the contents of the dropdown jump when it displays. This doesn't happen if accelerated compositing is disabled.
Attachments
Screenshot (260.78 KB, image/png)
2011-03-18 11:28 PDT, Simon Fraser (smfr)
no flags
Testcase (525 bytes, text/html)
2011-03-26 22:22 PDT, Simon Fraser (smfr)
no flags
Patch (10.76 KB, patch)
2011-04-10 21:37 PDT, Simon Fraser (smfr)
mjs: review+
Simon Fraser (smfr)
Comment 1 2011-03-18 11:16:27 PDT
Simon Fraser (smfr)
Comment 2 2011-03-18 11:28:20 PDT
Created attachment 86184 [details] Screenshot
Simon Fraser (smfr)
Comment 3 2011-03-26 22:22:47 PDT
Created attachment 87055 [details] Testcase
Simon Fraser (smfr)
Comment 4 2011-04-10 21:37:31 PDT
Maciej Stachowiak
Comment 5 2011-04-10 22:13:02 PDT
Comment on attachment 88968 [details] Patch r=me
Simon Fraser (smfr)
Comment 6 2011-04-10 22:22:53 PDT
Note You need to log in before you can comment on or make changes to this bug.